--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <!-- Minified version -->
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CliniDent</title>
 </head>
